# spotrify

./: Makefile  README.md  lib.py  main.py  pyproject.toml  sort.py
bracketify/: manage.py
bracketify/bracketify/: asgi.py  settings.py  urls.py  wsgi.py
bracketify/polls/: admin.py  models.py  views.py
bracketify/polls/static/polls/: style.css
bracketify/polls/templates/polls/: detail.html  index.html  results.html  vote.html
project/: package-lock.json
project/bracketify/: admin.py  apps.py  forms.py  lib.py  models.py  urls.py  views.py
project/bracketify/migrations/: 0001_initial.py  0002_users.py  0003_rename_users_players.py
project/bracketify/static/bracketify/: scripts.js  style.css
project/bracketify/templates/bracketify/: _base.html  album_sorting.html  artist_detail.html  artist_result.html  base.html  bracket.html  bracket_landing.html  bracket_sort.html  home.html  result.html  search_artist.html  sort.html  top_songs.html
project/polls/: models.py  tests.py
project/polls/migrations/: 0001_initial.py
project/polls/templates/polls/: results.html
project/project/: settings.py  urls.py
